add Discover Tickets modal to find auto-pr tagged Shortcut stories
